--- a/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
+++ b/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Events\Search.cs" />
     <Compile Include="Events\Selection.cs" />
     <Compile Include="Handlers\BridgeMessageHandler.cs" />
+    <Compile Include="Handlers\Tasks\TasksSearchOnCommentsReportMessageHandler.cs" />
     <Compile Include="IClientService.cs" />
     <Compile Include="ViewModels\AboutThisViewModel.cs" />
     <Compile Include="ViewModels\SearchResultViewModel.cs" />
