--- a/STMS/Simple.TaskManagement.Service.Point.Net/Simple.TaskManagement.Service.Point.Net.csproj
+++ b/STMS/Simple.TaskManagement.Service.Point.Net/Simple.TaskManagement.Service.Point.Net.csproj
@@ -79,6 +79,7 @@
     <Compile Include="MessageHandlers\Tasks\AddPeopleToTaskMessageHandler.cs" />
     <Compile Include="MessageHandlers\Tasks\RemovePeopleFromTaskMessageHandler.cs" />
     <Compile Include="Persistence\InMemory\InMemoryTaskStorage.cs" />
+    <Compile Include="Persistence\InMemory\InMemoryTaskStorageMockup.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryProcessor.cs" />
@@ -121,6 +122,7 @@
   </ItemGroup>
   <Import Project="..\..\SharedCode\Simple.Rebus.Extensions\Simple.Rebus.Extensions.projitems" Label="Shared" />
   <Import Project="..\..\SharedCode\Simple.Contract.Conventions\Simple.Contract.Conventions.projitems" Label="Shared" />
+  <Import Project="..\Simple.TaskManagement.DataTypes.Mockups\Simple.TaskManagement.DataTypes.Mockups.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
