--- a/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
+++ b/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
@@ -127,6 +127,7 @@
     </ApplicationDefinition>
     <Compile Include="ClientService.cs" />
     <Compile Include="DesignTimeData\Tasks.cs" />
+    <Compile Include="Events\Result.cs" />
     <Compile Include="Events\Search.cs" />
     <Compile Include="Events\Selection.cs" />
     <Compile Include="Handlers\BridgeMessageHandler.cs" />
