Next transaction factory, manager

--- a/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
+++ b/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
@@ -133,6 +133,8 @@
     <Compile Include="Handlers\Tasks\TasksSearchOnCommentsReportMessageHandler.cs" />
     <Compile Include="IClientService.cs" />
     <Compile Include="ViewModels\AboutThisViewModel.cs" />
+    <Compile Include="ViewModels\NextTaskFactoryViewModel.cs" />
+    <Compile Include="ViewModels\NextTaskManagerViewModel.cs" />
     <Compile Include="ViewModels\SearchResultViewModel.cs" />
     <Compile Include="ViewModels\TaskListViewModel.cs" />
     <Compile Include="ViewModels\TextSearchViewModel.cs" />
