--- a/STMS/Simple.TaskManagement.Contract.Net/Simple.TaskManagement.Contract.Net.csproj
+++ b/STMS/Simple.TaskManagement.Contract.Net/Simple.TaskManagement.Contract.Net.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Comments.cs" />
     <Compile Include="Contract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Staff.cs" />
+    <Compile Include="Contacts.cs" />
     <Compile Include="Tasks.cs" />
     <Compile Include="Time.cs" />
   </ItemGroup>
