--- a/STMS/Simple.TaskManagement.Service.Point.Net/Simple.TaskManagement.Service.Point.Net.csproj
+++ b/STMS/Simple.TaskManagement.Service.Point.Net/Simple.TaskManagement.Service.Point.Net.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Services\Tasks\TasksQueryService.cs" />
     <Compile Include="Services\Tasks\TaskStatusQueryService.cs" />
     <Compile Include="Services\Time\TimeQueryService.cs" />
+    <Compile Include="Testing\FakeServicePoint.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
