--- a/STMS/Simple.TaskManagement.Service.Point.NetTests/Simple.TaskManagement.Service.Point.NetTests.csproj
+++ b/STMS/Simple.TaskManagement.Service.Point.NetTests/Simple.TaskManagement.Service.Point.NetTests.csproj
@@ -36,6 +36,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -55,10 +71,21 @@
     <Compile Include="QueryProcessorTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Simple.Query.Net\Simple.Query.Net.csproj">
+      <Project>{c5726bc9-1a53-4f5e-94a7-fbf6fd6a7fb7}</Project>
+      <Name>Simple.Query.Net</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Simple.TaskManagement.Contract.Net\Simple.TaskManagement.Contract.Net.csproj">
+      <Project>{db517919-1d6c-4e89-a9ed-bb7bed058b4e}</Project>
+      <Name>Simple.TaskManagement.Contract.Net</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Simple.TaskManagement.Service.Point.Net\Simple.TaskManagement.Service.Point.Net.csproj">
       <Project>{3B0CEDDD-4F94-45E3-90FC-4D95C6DA0EC5}</Project>
       <Name>Simple.TaskManagement.Service.Point.Net</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
