added 'fake' task coordinator

--- a/STMS/Simple.TaskManagement.Coordinator.Net/Simple.TaskManagement.Coordinator.Net.csproj
+++ b/STMS/Simple.TaskManagement.Coordinator.Net/Simple.TaskManagement.Coordinator.Net.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Messages\TaskSagaTimeout.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Testing\FakeTaskCoordinator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
