--- a/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
+++ b/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Validators\SimpleDateValidationRule.cs" />
     <Compile Include="Validators\FutureDateValidationRule.cs" />
     <Compile Include="ViewModels\AboutThisViewModel.cs" />
+    <Compile Include="ViewModels\ApplicationSessionViewModel.cs" />
     <Compile Include="ViewModels\NextTaskFactoryViewModel.cs" />
     <Compile Include="ViewModels\NextTaskManagerViewModel.cs" />
     <Compile Include="ViewModels\SearchResultViewModel.cs" />
