added some stuff

--- a/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
+++ b/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
@@ -141,6 +141,7 @@
     <Compile Include="ViewModels\ApplicationSessionViewModel.cs" />
     <Compile Include="ViewModels\NextTaskItem.cs" />
     <Compile Include="ViewModels\NextTaskManagerViewModel.cs" />
+    <Compile Include="ViewModels\OpenTaskItem.cs" />
     <Compile Include="ViewModels\SearchResultViewModel.cs" />
     <Compile Include="ViewModels\TaskEditor.cs" />
     <Compile Include="ViewModels\TaskListViewModel.cs" />
