--- a/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
+++ b/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Validators\FutureDateValidationRule.cs" />
     <Compile Include="ViewModels\AboutThisViewModel.cs" />
     <Compile Include="ViewModels\ApplicationSessionViewModel.cs" />
+    <Compile Include="ViewModels\NextCommentItem.cs" />
     <Compile Include="ViewModels\NextTaskItem.cs" />
     <Compile Include="ViewModels\NextTaskManagerViewModel.cs" />
     <Compile Include="ViewModels\OpenTaskItem.cs" />
