--- a/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
+++ b/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
@@ -126,6 +126,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ClientService.cs" />
+    <Compile Include="Commands\Open.cs" />
     <Compile Include="Converters\ContactToListListConverter.cs" />
     <Compile Include="Converters\NullableDateTimeToStringConverter.cs" />
     <Compile Include="Events\Alert.cs" />
@@ -143,7 +144,7 @@
     <Compile Include="ViewModels\NextTaskItem.cs" />
     <Compile Include="ViewModels\OpenTaskItem.cs" />
     <Compile Include="ViewModels\SearchResultViewModel.cs" />
-    <Compile Include="ViewModels\TaskEditor.cs" />
+    <Compile Include="ViewModels\TaskEditorViewModel.cs" />
     <Compile Include="ViewModels\TaskListViewModel.cs" />
     <Compile Include="ViewModels\TaskManagerViewModel.cs" />
     <Compile Include="ViewModels\TextSearchViewModel.cs" />
