--- a/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
+++ b/STMS/Simple.TaskManagement.Client.Net/Simple.TaskManagement.Client.Net.csproj
@@ -128,6 +128,8 @@
     <Compile Include="ClientService.cs" />
     <Compile Include="Commands\Open.cs" />
     <Compile Include="Converters\ContactToListListConverter.cs" />
+    <Compile Include="Converters\EnumConverters.cs" />
+    <Compile Include="Converters\Extensions\EnumExtensions.cs" />
     <Compile Include="Converters\NullableDateTimeToStringConverter.cs" />
     <Compile Include="Events\Alert.cs" />
     <Compile Include="Events\Result.cs" />
