--- a/STMS/Simple.TaskManagement.Launcher.Net/Simple.TaskManagement.Launcher.Net.csproj
+++ b/STMS/Simple.TaskManagement.Launcher.Net/Simple.TaskManagement.Launcher.Net.csproj
@@ -38,6 +38,9 @@
   <PropertyGroup>
     <ApplicationIcon>launcher.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Simple.TaskManagement.Launcher.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -73,6 +76,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
