--- a/STMS/Simple.TaskManagement.Service.Point.Net/packages.config
+++ b/STMS/Simple.TaskManagement.Service.Point.Net/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="Costura.Fody" version="1.4.1" targetFramework="net461" developmentDependency="true" />
+  <package id="Fody" version="2.0.6" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Rebus" version="4.0.0-b06" targetFramework="net461" />
   <package id="Rebus.Unity" version="3.0.0" targetFramework="net461" />
